# data-connector

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  fetch_query.yaml  pyproject.toml  query_config.yaml  sensor_test.csv  server.ps1  sonar-project.properties  start_celery_beat.bat  start_celery_worker.bat  start_server.bat  startup.ps1  tags.yaml  update.ps1
.dlt/: .sources  config.toml
.github/workflows/: ci.yaml  sonarcloud.yaml
app/: auth.py  celery.py  config.py  db.py  main.py  models.py  tasks.py  utils.py
queries/: sample_query.sql  test_query.sql
schemas/import/: sensor_data.schema.yaml
src/: auth.py  celery.py  config.py  db.py  main.py  models.py  query.py  schemas.py  tasks.py  utils.py
tests/: test_api.py  test_tasks.py
